# XmlRuntime

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.cursor/rules/: cursorrules.mdc
.github/workflows/: android.yml
Voyager/: README.md  build.gradle.kts
Voyager/src/androidTest/java/com/voyager/: ExampleInstrumentedTest.kt
Voyager/src/main/cpp/: CMakeLists.txt  xmlParser.cpp
Voyager/src/main/kotlin/com/voyager/core/: KoinAppModule.kt  Voyager.kt  VoyagerActivity.kt
Voyager/src/main/kotlin/com/voyager/di/: KoinAppModule.kt
Voyager/src/main/kotlin/com/voyager/utils/: ArrayMapSerializer.kt  Attributes.kt  AttributesHandler.kt  BaseViewAttributes.kt  DimensionConverter.kt  DimensionConvertor.kt  DynamicLayoutInflation.kt  Extensions.kt  FileHelper.kt  GeneratedView.kt  ParserHelper.kt  ReflectionUtils.kt  Resource.kt  Utils.kt  Value.kt  ViewHelper.kt
Voyager/src/test/java/com/voyager/utils/: DimensionConvertorTest.kt
Voyager/src/test/kotlin/com/voyager/utils/: DimensionConverterTest.kt  ExtensionsTest.kt  ReflectionUtilsTest.kt  UtilsTest.kt
app/: README.md  build.gradle.kts
app/src/androidTest/java/com/runtimexml/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  xmlParser.cpp
app/src/main/java/com/dynamic/: MyApplication.kt
app/src/main/java/com/dynamic/di/: AppModule.kt
app/src/main/java/com/dynamic/utils/: ArrayMapSerializer.kt  Attributes.kt  BaseViewAttributes.kt  DimensionConvertor.kt  DynamicLayoutInflation.kt  Extensions.kt  FileHelper.kt  GeneratedView.kt  JsonCast.kt  ParserHelper.kt  Utils.kt  ViewHelper.kt
app/src/main/java/com/runtimexml/: MyApplication.kt
app/src/main/java/com/runtimexml/activities/: MainActivity.java
app/src/main/java/com/runtimexml/di/: AppModule.kt
app/src/main/java/com/runtimexml/utils/: AppDatabase.kt  Attributes.kt  BaseView.kt  BaseViewAttributes.kt  DatabaseProvider.kt  DimensionConvertor.java  DimensionConvertor.kt  DynamicLayoutInflation.kt  Extensions.kt  FileHelper.kt  GeneratedView.kt  JsonCast.kt  ParentViewReference.kt  ParserHelper.kt  RoomHelper.kt  Utils.kt  UtilsKt.kt  ViewHelper.kt  ViewState.kt  ViewTypeParser.kt
app/src/main/java/com/runtimexml/viewModel/: MainViewModel.java
app/src/main/kotlin/com/example/: MyApplication.kt
app/src/main/kotlin/com/example/di/: AppModule.kt
app/src/main/kotlin/com/example/logging/: AndroidLogger.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dynamic/: ExampleUnitTest.kt
app/src/test/java/com/runtimexml/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
proteus-core/: build.gradle.kts
proteus-core/src/main/res/layout/: layout_params_hack.xml
viewcore/: build.gradle.kts
viewcore-ksp/: build.gradle.kts
viewcore-ksp/src/main/java/com/dynamic/: AttributeProcessor.kt  AttributeProcessorProvider.kt
viewcore/src/main/java/com/dynamic/: AttributeProcessor.kt
viewcore/src/main/java/com/dynamic/annotations/: AutoAttribute.kt  AutoViewAttributes.kt
viewcore/src/main/java/com/runtimexml/: AttributeProcessor.kt  AttributeProcessorProvider.kt
viewcore/src/main/java/com/runtimexml/annotations/: AutoAttribute.kt  AutoViewAttributes.kt
voyager-ksp/: build.gradle.kts
voyager-plugin/: README.md  build.gradle.kts
voyager-plugin/src/main/kotlin/com/dynamic/plugin/: GenerateResourcesTask.kt  ResourcesExtension.kt  ResourcesPlugin.kt
voyager-processor/: README.md  build.gradle.kts
(+284 files in other folders)
